thêm modules kiểm duyệt tài liệu cho admin và thông báo báo cáo gửi email
